{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 341,
  "lineage": "ec85b0e0-30f4-a116-6cde-7bdcefa1b7b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-7f482f83",
            "domain": "vpc",
            "id": "eipalloc-0c4453f9bd60c5b79",
            "network_interface": "eni-0418b8668b19d7729",
            "private_dns": "ip-10-0-1-216.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-3-104-126-35.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.126.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-4412a189",
            "domain": "vpc",
            "id": "eipalloc-0e82b72efc4da38bf",
            "network_interface": "eni-09e63f701921813c3",
            "private_dns": "ip-10-0-2-32.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.32",
            "public_dns": "ec2-13-238-111-206.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.111.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d04b9b94978b45bd",
            "owner_id": "552644762830",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/app-20191208153901332300000001/c0dd3579945da2da",
            "arn_suffix": "app/app-20191208153901332300000001/c0dd3579945da2da",
            "dns_name": "internal-app-20191208153901332300000001-788014255.ap-southeast-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/app-20191208153901332300000001/c0dd3579945da2da",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-20191208153901332300000001",
            "name_prefix": "app-",
            "security_groups": [
              "sg-09c8a28d6500d9b69"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c72db4492d03b6c"
              },
              {
                "subnet_id": "subnet-0ea4d87848824f471"
              }
            ],
            "subnets": [
              "subnet-04c72db4492d03b6c",
              "subnet-0ea4d87848824f471"
            ],
            "vpc_id": "vpc-0b2ad2d0e6ce6823b",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "depends_on": [
            "aws_security_group.application_alb_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "presentation_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/pres-20191208153508027900000004/e61857b97211686a",
            "arn_suffix": "app/pres-20191208153508027900000004/e61857b97211686a",
            "dns_name": "pres-20191208153508027900000004-1899870652.ap-southeast-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/pres-20191208153508027900000004/e61857b97211686a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pres-20191208153508027900000004",
            "name_prefix": "pres-",
            "security_groups": [
              "sg-03ca992ce3d73dd1e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b849749b0ad10ce"
              },
              {
                "subnet_id": "subnet-0cef38f174bae9c84"
              }
            ],
            "subnets": [
              "subnet-00b849749b0ad10ce",
              "subnet-0cef38f174bae9c84"
            ],
            "vpc_id": "vpc-0b2ad2d0e6ce6823b",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "depends_on": [
            "aws_security_group.presentation_alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_alb_listener_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/app-20191208153901332300000001/c0dd3579945da2da/c731942430a77ec3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/app-20191208151317682300000001/df9293d16c3daadd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/app-20191208153901332300000001/c0dd3579945da2da/c731942430a77ec3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/app-20191208153901332300000001/c0dd3579945da2da",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.application_alb",
            "aws_lb_target_group.application_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "presentation_alb_listener_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/pres-20191208153508027900000004/e61857b97211686a/7cce6fcca9835924",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/pres-20191208153508027900000004/e61857b97211686a/7cce6fcca9835924",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/pres-20191208153508027900000004/e61857b97211686a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.presentation_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "presentation_alb_listener_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/pres-20191208153508027900000004/e61857b97211686a/11734bbd4d3c8216",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:552644762830:certificate/925c6502-9498-469e-9e46-62d8bc243097",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/pres-20191208153507374500000001/5c12a07828803811",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:listener/app/pres-20191208153508027900000004/e61857b97211686a/11734bbd4d3c8216",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:loadbalancer/app/pres-20191208153508027900000004/e61857b97211686a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.presentation_alb",
            "aws_lb_target_group.presentation_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/app-20191208151317682300000001/df9293d16c3daadd",
            "arn_suffix": "targetgroup/app-20191208151317682300000001/df9293d16c3daadd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/app-20191208151317682300000001/df9293d16c3daadd",
            "lambda_multi_value_headers_enabled": false,
            "name": "app-20191208151317682300000001",
            "name_prefix": "app-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "presentation_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/pres-20191208153507374500000001/5c12a07828803811",
            "arn_suffix": "targetgroup/pres-20191208153507374500000001/5c12a07828803811",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:552644762830:targetgroup/pres-20191208153507374500000001/5c12a07828803811",
            "lambda_multi_value_headers_enabled": false,
            "name": "pres-20191208153507374500000001",
            "name_prefix": "pres-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4453f9bd60c5b79",
            "id": "nat-06b763bbf1fbf6bf1",
            "network_interface_id": "eni-0418b8668b19d7729",
            "private_ip": "10.0.1.216",
            "public_ip": "3.104.126.35",
            "subnet_id": "subnet-0cef38f174bae9c84"
          },
          "depends_on": [
            "aws_eip.eip_1",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e82b72efc4da38bf",
            "id": "nat-0f933c020d3541c67",
            "network_interface_id": "eni-09e63f701921813c3",
            "private_ip": "10.0.2.32",
            "public_ip": "13.238.111.206",
            "subnet_id": "subnet-00b849749b0ad10ce"
          },
          "depends_on": [
            "aws_eip.eip_2",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b093b6412b4d2649",
            "owner_id": "552644762830",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06b763bbf1fbf6bf1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_2_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-080699676ee69459e",
            "owner_id": "552644762830",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f933c020d3541c67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b46aab5794a8f105",
            "owner_id": "552644762830",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d04b9b94978b45bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_2_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0315ad3185d9f8b1b",
            "owner_id": "552644762830",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d04b9b94978b45bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00de9c294110309f0",
            "route_table_id": "rtb-0b093b6412b4d2649",
            "subnet_id": "subnet-0ea4d87848824f471"
          },
          "depends_on": [
            "aws_route_table.private_subnet_1_route_table",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038cc5556d274f388",
            "route_table_id": "rtb-080699676ee69459e",
            "subnet_id": "subnet-04c72db4492d03b6c"
          },
          "depends_on": [
            "aws_route_table.private_subnet_2_route_table",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5493a3e32204a09",
            "route_table_id": "rtb-0b46aab5794a8f105",
            "subnet_id": "subnet-0cef38f174bae9c84"
          },
          "depends_on": [
            "aws_route_table.public_subnet_1_route_table",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b21780cdd309ca",
            "route_table_id": "rtb-0315ad3185d9f8b1b",
            "subnet_id": "subnet-00b849749b0ad10ce"
          },
          "depends_on": [
            "aws_route_table.public_subnet_2_route_table",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:security-group/sg-09c8a28d6500d9b69",
            "description": "application_alb_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c8a28d6500d9b69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c427b8625e68c788"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application_alb_sg",
            "name_prefix": null,
            "owner_id": "552644762830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_security_group.presentation_instance_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:security-group/sg-0c9d0bf60afd8818a",
            "description": "application_instance_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9d0bf60afd8818a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.141/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c8a28d6500d9b69"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application_instance_sg",
            "name_prefix": null,
            "owner_id": "552644762830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_security_group.application_alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "presentation_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:security-group/sg-03ca992ce3d73dd1e",
            "description": "presentation_alb_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ca992ce3d73dd1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "presentation_alb_sg",
            "name_prefix": null,
            "owner_id": "552644762830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "presentation_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:security-group/sg-0c427b8625e68c788",
            "description": "presentation_instance_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c427b8625e68c788",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.141/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ca992ce3d73dd1e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "presentation_instance_sg",
            "name_prefix": null,
            "owner_id": "552644762830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_security_group.presentation_alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:subnet/subnet-0ea4d87848824f471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ea4d87848824f471",
            "map_public_ip_on_launch": false,
            "owner_id": "552644762830",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:subnet/subnet-04c72db4492d03b6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04c72db4492d03b6c",
            "map_public_ip_on_launch": false,
            "owner_id": "552644762830",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:subnet/subnet-0cef38f174bae9c84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cef38f174bae9c84",
            "map_public_ip_on_launch": false,
            "owner_id": "552644762830",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:subnet/subnet-00b849749b0ad10ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00b849749b0ad10ce",
            "map_public_ip_on_launch": false,
            "owner_id": "552644762830",
            "vpc_id": "vpc-0b2ad2d0e6ce6823b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:552644762830:vpc/vpc-0b2ad2d0e6ce6823b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ae119554c65dd54",
            "default_route_table_id": "rtb-06b7525da07199c25",
            "default_security_group_id": "sg-0ae8c7be35b8a7e1d",
            "dhcp_options_id": "dopt-dd2eeab9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b2ad2d0e6ce6823b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06b7525da07199c25",
            "owner_id": "552644762830"
          }
        }
      ]
    }
  ]
}